@@ -263,7 +263,8 @@ cp(char *s, char *ss)
    EDBUG_RETURN_;
 }
 
-time_t moddate(char *s)
+time_t
+moddate(char *s)
 {
    struct stat         st;
 
